--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
 /*  your css code here. If applicable */
+.lights {
+	width: 400px;
+	background-color: gray;
+	border: 4px solid black;
+	border-radius: 40px;
+	padding: 36px 20px;
+}
+#green,
+#yellow,
+#red{
+	display: inline-block;
+	width: 100px;
+	height: 100px;
+	border-radius: 50px;
+	margin-left: 45px
+}
+#green {
+	background-color: green;
+	
+}
+#yellow {
+	background-color: yellow;
+	margin: 2px;
+}
+#red {
+	background-color: red;
+	margin: 1px;
+}
